# binaryllm

./: .gitignore  CHANGELOG.md  CONTRIBUTORS.md  README.md  pyproject.toml  requirements.txt
docs/: README.md  TECHNICAL_REFERENCE.md  binaryllm_report_v2.md
docs/architecture/: binaryllm_phase1_architecture_v1.md
docs/engineering/: binaryllm_engineering_recap_2025_11_23.md
docs/papers_arxiv/: binaryllm_paper_arxiv_v1.md
docs/progress/: BinaryLLM-Phase-1-Fina-Report-Stability-Seal.md  Phase-1-t12-Progress-Log.md  binary_llm_phase_1_progress_log.md  binary_llm_phase_1_progress_log_v2.md  binary_llm_phase_1_progress_log_v3.md  binaryllm_phase1_t8_progress_log.md  binaryllm_phase_1_progress_log_t_4.md  binaryllm_phase_1_progress_t_9.md  binaryllm_phase_1_t_10_progress_log.md  phase_1_progress_log_t_1_t_13_14.md  phase_1_t_13_progress_log.md  t11_progress_log_phase1.md  t5_progress_log_phase_1.md  t6_log_progress.md
docs/validation/: architecture_validation_pass.json
phase_2/: iteration_03_hostile.md  iteration_03_scientist.md  iteration_03_strategist.md  iteration_04_hostile.md  iteration_04_scientist.md  iteration_04_strategist.md  nig_tech_5.txt  phase2_final_plan.md  phase2_results_targets_and_paths.md  phase2_results_targets_and_paths_review_hostile.md  research_log_phase2.md  research_logs_hostile_iteration1.md
scripts/: generate_phase1_golden.py
src/: __init__.py
src/core/: __init__.py  dataset_catalog.py  datasets.py  embeddings.py
src/eval/: __init__.py  classification.py  retrieval.py  similarity.py
src/experiments/: __init__.py
src/experiments/configs/: __init__.py
src/experiments/runners/: __init__.py  phase1_binary_embeddings.py
src/quantization/: __init__.py  binarization.py  packing.py
src/utils/: __init__.py  config.py  io.py  logging.py  seed.py
src/variants/: __init__.py  binary_embedding_engine.py
tests/: __init__.py  test_binary_embedding_engine.py  test_core_dataset_catalog.py  test_core_datasets.py  test_core_embeddings.py  test_eval_classification.py  test_eval_retrieval.py  test_eval_similarity.py  test_experiments_phase1_pipeline.py  test_package_imports.py  test_phase1_structural_integrity.py  test_quantization_binarization.py  test_quantization_packing.py  test_regression_phase1_configs.py  test_regression_phase1_golden.py  test_utils_config.py  test_utils_io.py  test_utils_logging.py  test_utils_seed.py
